--- a/package.json
+++ b/package.json
@@ -5,16 +5,25 @@
   "main": "dist/how-long-till-lunch.cjs.js",
   "module": "dist/how-long-till-lunch.esm.js",
   "browser": "dist/how-long-till-lunch.umd.js",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-plugin-emotion": "^10.0.17",
     "@types/ms": "^0.7.30",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/parser": "^2.2.0",
+    "babel-eslint": "^10.0.3",
+    "babel-plugin-emotion": "^10.0.17",
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.0",
+    "prettier": "^1.18.2",
     "rollup": "^1.0.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^9.2.0",
@@ -26,7 +35,9 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "ts": "tsc src/*.ts"
+    "ts": "tsc src/*.ts",
+    "lint": "yarn run eslint './**/*.ts'",
+    "lint:fix": "yarn run eslint './**/*.ts' --fix"
   },
   "files": [
     "dist"
