--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.6.0",
+    "@storybook/addon-actions": "^5.1.11",
+    "@storybook/addon-links": "^5.1.11",
+    "@storybook/addons": "^5.1.11",
+    "@storybook/react": "^5.1.11",
     "@types/ms": "^0.7.30",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/storybook__react": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-emotion": "^10.0.17",
-    "emotion": "^10.0.17",
     "eslint": "^6.3.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -47,7 +51,9 @@
     "build": "webpack --mode=production",
     "lint": "yarn run eslint --ext .ts --ext .tsx './src'",
     "lint:fix": "yarn run eslint './**/*.ts' './**/*.tsx' --fix",
-    "ts": "tsc --noEmit"
+    "ts": "tsc --noEmit",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "files": [
     "dist"
@@ -62,5 +68,8 @@
   "bugs": {
     "url": "https://github.com/the-right-thing/react-awesome-analytics/issues"
   },
-  "homepage": "https://github.com/the-right-thing/react-awesome-analytics#readme"
+  "homepage": "https://github.com/the-right-thing/react-awesome-analytics#readme",
+  "dependencies": {
+    "@emotion/core": "^10.0.17"
+  }
 }
