basic tree of components and storyless examples

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,7 @@
     "rootDirs": ["src", "stories"],
     "baseUrl": "src"
   },
-  "include": ["src/**/*", ]
+  "compileOnSave": false,
+  "buildOnSave": false,
+  "include": ["src/**/*", "stories/**/*" ]
 }
