--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "react-dom": "^16.9.0"
   },
   "devDependencies": {
+    "@atlaskit/button": "^13.2.0",
+    "@atlaskit/css-reset": "^5.0.8",
     "@babel/core": "^7.6.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.6.0",
-    "@storybook/addon-actions": "^5.1.11",
-    "@storybook/addon-links": "^5.1.11",
-    "@storybook/addons": "^5.1.11",
-    "@storybook/react": "^5.1.11",
+    "@storybook/addon-actions": "^5.2.0-rc.11",
+    "@storybook/addon-links": "^5.2.0-rc.11",
+    "@storybook/addons": "^5.2.0-rc.11",
+    "@storybook/react": "^5.2.0-rc.11",
     "@types/ms": "^0.7.30",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
@@ -42,6 +44,7 @@
     "prettier": "^1.18.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "styled-components": "3.3.3",
     "tslib": "^1.9.3",
     "typescript": "^3.2.2",
     "webpack": "^4.40.1",
@@ -70,6 +73,7 @@
   },
   "homepage": "https://github.com/the-right-thing/react-awesome-analytics#readme",
   "dependencies": {
-    "@emotion/core": "^10.0.17"
+    "@emotion/core": "^10.0.17",
+    "uuid": "^3.3.3"
   }
 }
