--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "@atlaskit/button": "^13.2.0",
     "@atlaskit/css-reset": "^5.0.8",
+    "@atlassian/frontend-techstack": "^0.8.2",
+    "@atlassian/techstack-runtime": "^0.8.2",
     "@babel/core": "^7.6.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
